<resources>

    <!-- Main Strings -->
    
    <string name="app_name">Reflection App</string>
    <string name ="gateway_name">Gateway</string> 
    <string name = "dashboard_name">Dashboard</string>
    <string name ="map_name">iMap</string>
    
    <string name="title_activity_main">DashBoard</string>
    <string name ="title_activity_settings">Set up </string>
    <string name ="title_activity_map">Map app</string>
    <string name= "title_activity_event">Events</string>
    <string name = "title_activity_config">Configure</string>
    <string name ="title_checklist">Checklist</string>
    
    
    <string name ="checklist_info">Review the steps to take when injured person is located</string>
    
    
    <!-- Checklist -->
    <string name ="checklist_step_1">Scene Survey</string>
    <string name ="checklist_step_2">Primary survey</string>
    <string name ="checklist_step_3">Secondary survey</string>
    <string name ="checklist_step_4">Ongoing Casualty Care</string>
    
    <string name="checklist_step_1_elaborated">Take control of the scene and find out what happened before helping any casualties. </string>
    <string name ="checklist_step_2_elaborated">Assess each casualty for life-threatening injuries or illnesses and give life-saving first aid.</string>
    <string name ="checklist_step_3_elaborated">During this step the first aider performs a more thorough check for injuries and illnesses that were not revealed in the primary survey.</string>
    <string name="checklist_step_4_elaborated">Stay with the casualty until medical help arrives and takes over.</string>
    
    
    <!-- TABS -->
    <string name ="gateway_tab_status">Status</string>
    <string name ="gateway_tab_config">Set Up</string>
    <string name="main_activity_tab_dasboard">Dashboard</string>
    <string name="main_ativity_tab_profile">Profile</string>
    <!-- Progress dialogs -->
    <string name ="progress_title_bluetooth">Bluetooth</string>
    <string name="progress_message_bluetooth">Scanning for devices</string>
    <!-- Dialogs -->
    <string name ="choose_device_dialog_title">Choose device</string>
    <!-- Toasts -->
    <string name="toast_enable_wireless">Enable wireless settings in phone settings</string>
    <string name="toast_bluetooth_enabled">Bluetooth is now enabled. You can now sync with WATCHiT</string>
    <string name="toast_stopped_location_service">Stopped location service</string>
    <string name="toast_stopped_watchit_service">WATCHiT is no longer being synced.</string>
    <string name="toast_new_data_published">New data published in event:</string>
    <string name ="toast_event_first">You must register with an event first</string>
    <string name="toast_watchit_connection_lost">Lost connection with WATCHiT</string>
    
    <!-- Status strings -->
   <string name="watchit_service_started"> WATCHiT connected and running. </string>
   <string name="watchit_service_stopped"> WATCHiT no longer connected.</string>
   <string name="server_sync"> Syncing with server.. </string>
   <string name="status">Status</string>
   <string name ="save">Save</string>
   <string name="event_not_registered">No event chosen</string>
   <string name="log_in_failed">Failed to connect</string>
   <string name="sync">Sync</string>
   <string name="syncing">Syncing</string>
   <string name="data_sync_failed">Failed to sync data. Try again!</string>
   
   <!-- Menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_spaces">Spaces</string>
    <string name="menu_sync">Synchronization</string>
    <string name="menu_config">Configuration</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_logout">Switch User/Server</string>
    <string name="menu_event">Event</string>
    <string name= "menu_change_event">Change Event</string>
    <string name="menu_map_type_layer">Mat Type</string>
    <string name ="menu_map_layers">Data Points</string>
    
    <string name= "cancel">Cancel</string>
    
    <!-- App (default) configurations: -->
    <string name="host">sandbox.idi.ntnu.no</string>
    <string name="port">5222</string>
    <string name="domain">sandbox</string>
    <string name="application_id">watchIt_Reflection_App</string>
    <string name ="sdkcache">sdkcache20</string>
    
	<!-- General strings -->
    <string name="online_mode">Online mode</string>
    <string name="location_data">Location data</string>
    <string name="location">Location</string>
    <string name="location_enable_sensors">Enable location sensors. GPS is most accurate</string>
    <string name="user">User</string>
    <string name="my_stats">My stats</string>
    <string name="internet">Internet</string>
    <string name="mood">Mood</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>
    <string name="person_rescued">Person Rescued</string>
    <string name="checklist">Checklist</string>
    <string name="server">Server</string>
    <string name="event">Event</string>
    
    <!-- Gateway activity -->
    <string name="members">Members </string>
    <string name="data">Data </string>
    <string name="name">Name</string>
    <string name="adress">Address</string>
    <string name="location_enabled">Location enabled..</string>
    <string name="register_event_first">Please register with an event first</string>
    
    <string name ="user_logged_in">Logged in</string>
    
    <string name="ok">OK</string>
    <string name="search">Search</string>
    
    <!-- fragment status -->
    <string name="latest">Latest</string>
    <string name="no_news">No News</string>
    
    
    <string name="select_event">Select event</string>
    
    
	<!-- Bluetooth -->
	<string name="bluetooth">Bluetooth</string>
	<string name="bluetooth_connecting">Connecting to bluetooth</string>
	<string name="bluetooth_ready_data">Ready to receieve data</string>
	<string name="bluetooth_connection_failed">Failed to connect</string>
    <string name="bluetooth_choose_paired_devices">Choose paired device or search</string>
    
    <!-- MapType -->
    <string name="map_type">Map Type</string>
    <string name="map_type_normal">Normal</string>
    <string name ="map_type_sattelite">Satellite</string>
    <string name= "map_type_terrain">Terrain</string>
    <string name="map_type_hybrid">Hybrid</string>
    
    <!-- MapLayers DataPoints -->
    <string name="datapoints">DataPoints</string>
    <string name="persons">Persons</string>
    <string name="moods">Moods</string>
    <string name ="only_me">Only me</string>
    
    <!-- Stats -->
    <string name ="moods">Moods</string>
    <string name ="persons_i_rescued">Persons I rescued</string>
    
    
    <string name="text_trainingappstartscreen">Welcome to the Training procedure app. To begin please choose a pre defined procedure or create a new.</string>
    
    

</resources>