<?xml version="1.0" encoding="utf-8"?>


<!-- www.androidicons.com -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragments.StatusFragment" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewLatest"
            style="@style/textHoloBlueLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
    <TextView
        android:id="@+id/textViewLatestInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_news"
        android:layout_marginTop="5dp" />
        
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewStatus"
                style="@style/textHoloBlueLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewOnlineLED"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle_red_light" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online_mode"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
        
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >
            
            <ImageView
                android:id="@+id/imageViewLocatiohLED"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/circle_red_light" />
			
              <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_data"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
      
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >
            
            <ImageView
                android:id="@+id/imageViewWatchitLED"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/circle_red_light" />
            
            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="WATCHiT"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
        
               <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >
            
            <ImageView
                android:id="@+id/imageViewEventLED"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/circle_red_light" />
            
            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_event"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                    android:id="@+id/textViewEventLedEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
  

  
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_event"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#33B5E5" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>